--- a/vignettes/rankIC.Rmd
+++ b/vignettes/rankIC.Rmd
@@ -81,19 +81,86 @@ leading to the Gehan estimator and the log-rank estimator,
 respectively, if $\tilde\phi_{ik}(\beta)=\sum_{j=1}^n\varphi_j\sum_{l=1}^{m_j}\eta_{1jl} I\{v_{ik}(\beta)\le u_{jl}(\beta) \}$ and 
 $\tilde\phi_{ik}(\beta)=1$. 
 
-See Choi et al. (2022+) for more detailed description of estimating our methods.
+See Choi et al. (2022+) for more detailed description of our estimating procedures.
+
+## Usages
+
+Installation of `rankIC` package can be done by
+```{r,eval = FALSE}
+devtools::install_github(repo='taehwa015/rankIC')
+```
+
+`aft_rank()` function has the following arguments:
+```{r,eval = FALSE}
+aft_rank(U,V,X,Delta,id,alpha,type,maxit,tol,R)
+```
+see the detailed description from `help(aft_rank)`.
+
+We first simulate univariate doubly-censored data
+with normal random error, which is one of 
+simulation set-ups in Choi et al. (2022+).
+```{r, cache=TRUE}
+library(rankIC)
+set.seed(111)
+n = 200
+x1 = rnorm(n)
+x2 = ifelse(rnorm(n)>0, 1, 0)
+X = cbind(x1,x2)
+T = 2 + x1 + x2 + rnorm(n)
+U = (1 - 0.25*x1)*runif(n, -6, 3.85)
+V = U + (1 - 0.5*x2)*runif(n, 6, 19.6)
+U = exp(dplyr::case_when(TRUE ~ T, T>V ~ V, T<U ~ -Inf))
+V = exp(dplyr::case_when(TRUE ~ T, T>V ~ Inf, T<U ~ U))
+Delta = ifelse(U==V, 1, 0)
+aft_rank(U = U, V = V, X = X, Delta = Delta, type = "gehan", R = 20)
+aft_rank(U = U, V = V, X = X, Delta = Delta, type = "logrank", R = 20)
+```
+We posit two estimating methods, Gehan and log-rank,
+which can be conducted by specifying `type = "gehan"` and `type = "logrank"`, respectively.
+
+
+
+Next, we give illustrative example of the method for the multivariate clustered data, 
+by using phase 3 metastatic colorectal cancer clinical trial.
+This dataset is available `data(mCRC)` in `PICBayes` package (Pan, 2021).
+```{r, cache=TRUE}
+library(PICBayes)
+data(mCRC)
+dt0 = as.data.frame(mCRC)
+d = with(dt0,
+         data.frame(U = ifelse(is.na(L), 0, L),
+                    V = ifelse(is.na(R), Inf, R),
+                    Delta = 1-IC,
+                    x1 = TRT_C,
+                    x2 = KRAS_C,
+                    id = SITE))
+U = d$U; V = d$V; X = cbind(d$x1,d$x2); Delta = d$Delta; id = d$id
+aft_rank(U = U, V = V, X = X, Delta = Delta, id = id, 
+         alpha = 1, type = "gehan", R = 20)
+aft_rank(U = U, V = V, X = X, Delta = Delta, id = id, 
+         alpha = 1, type = "logrank", R = 20)
+```
+The treatment variable is positlvely related to the progression-free survival (PFS) time, while the mutant-type of KRAS status accelerates the PFS time.
+For the stable variance estimation, it is recommended to increase the number of resampling (`R`), e.g., `R = 200`.
+
 
 
 ## References
 
 * Jin, Z., Lin, D. Y., Wei, L. J. and Ying, Z. (2003). 
 Rank‐based inference for the accelerated failure time model. 
-Biometrika, 90(2), 341-353.
+Biometrika, 90(2), 341--353.
 
 * Wang, Y. G. and Zhao, Y. (2008). 
 Weighted rank regression for clustered data analysis. 
-Biometrics, 64(1), 39-45.
+Biometrics, 64(1), 39--45.
 
 * Choi, T., Choi, S. and Bandyopadhyay, D. (2022+). 
 Rank estimation for the accelerated failure time model with partially interval-censored data. 
-*Submitted to Biometrics*.
+Submitted to Biometrics.
+
+* Pan, C. (2021).
+PICBayes: Bayesian Models for Partly Interval-Censored Data.
+R package.
+https://CRAN.R-project.org/package=PICBayes.
+
